semV/compilatoare/lab1/traceback.txt
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/pudb/__init__.py", line 77, in runscript
    dbg._runscript(mainpyfile)
  File "/usr/local/lib/python2.7/dist-packages/pudb/debugger.py", line 371, in _runscript
    self.run(statement, globals=globals_, locals=locals_)
  File "/usr/lib/python2.7/bdb.py", line 400, in run
    exec cmd in globals, locals
  File "<string>", line 1, in <module>
  File "ParseCode.py", line 58
    'read': 16, 'write': 17,
         ^
SyntaxError: invalid syntax
